--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
   <head>
     <title>Counter</title>
-    <link rel="stylesheet" href="../js/style.css" />
+    <link rel="stylesheet" href="../MAT20_Final_Project/css/style.css" />
     <script type="text/javascript" src="/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=iztxailAs15aH6t2ljPNSPgU9fnX8sRKoSYzmb4jSSJG2XWNbxns__50Cxw3WPT89CbDaqFVxiGzV8en4gsqytx0u2TqLryiDejFLogQEVVOtL1eYPFWgrwLREI2RTM3JsyRGSdeyjk8vtSh0pmVmLdsEprLzhUKc__mGPqynSyvWuPfPVg1njJ53cluKOi_" charset="UTF-8"></script>
   </head>
   <body>
     <header class="head_container"> 
       <div class="read">
-        <p>You clicked </p>
+        <p> You clicked </p>
         <br>
         <div id="end"></div>
         <br>
-        <p> times</p>
+        <p> times </p>
       </div> 
     </header>
     <div class = "button_container">
       <button onclick = "count()"> CLICK ME </button>   
     </div>
-    <script src="../js/lab9.js"></script>
+    <script src="../MAT20_Final_Project/js/lab9.js"></script>
   </body>
 </html>
