--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Counter</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css" />
     <script type="text/javascript" src="/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=iztxailAs15aH6t2ljPNSPgU9fnX8sRKoSYzmb4jSSJG2XWNbxns__50Cxw3WPT89CbDaqFVxiGzV8en4gsqytx0u2TqLryiDejFLogQEVVOtL1eYPFWgrwLREI2RTM3JsyRGSdeyjk8vtSh0pmVmLdsEprLzhUKc__mGPqynSyvWuPfPVg1njJ53cluKOi_" charset="UTF-8"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
+    <img class="background_mountains" src="/img/background_mountains.png"> 
+    <img class="sun" src="/img/sun.png">
+    <img class="moon" src="/img/moon.png">
     <div class = "button_container">
-      <button type="button" onclick = "count()"> <img src="img/button_counter.png" height =100% width=100% /> </button>
+      <button type="button" onclick = "count()"> <img src="img/button_counter.png"/> </button>
     </div>   
     <header class="head_container"> 
       <div class="read">
@@ -19,8 +26,8 @@
       </div> 
     </header>
     <div class = "button_reset">
-      <button type="button" onclick = "reset()"> <img src="img/button_reset.png" height =100% width=100% /> </button>
-    </div>
+      <button type="button" onclick = "reset()"> <img src="img/button_reset.png"/> </button>
+    </div> 
     <script src="js/lab9.js"></script>
   </body>
 </html>
