fixx: img display bug

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <img class="background_mountains" src="/img/background_mountains.png"> 
-    <img class="sun" src="/img/sun.png">
-    <img class="moon" src="/img/moon.png">
+    <img class="background_mountains" src="img/background_mountains.png"> 
+    <img class="sun" src="img/sun.png">
+    <img class="moon" src="img/moon.png">
     <div class = "button_container">
       <button type="button" onclick = "count()"> <img src="img/button_counter.png"/> </button>
     </div>   
