add sun movement by Y-axis onclick

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <img class="background_mountains" src="img/background_mountains.png"> 
-    <img class="sun" src="img/sun.png">
+    <img class="sun" src="img/sun.png" id='sun'>
     <img class="moon" src="img/moon.png">
     <div class = "button_container">
       <button type="button" onclick = "count()"> <img src="img/button_counter.png"/> </button>
@@ -20,7 +20,7 @@
       <div class="read">
         <p> You clicked </p>
         <br>
-        <div id="end"></div>
+        <div id="zikrs"></div>
         <br>
         <p> times </p>
       </div> 
