add Sky objects movement: auto & onClick

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <body>
     <img class="background_mountains" src="img/background_mountains.png"> 
     <div class = "skyObjects">
-      <img class="sun" src="img/sun.png" id='sun'>
-      <img class="moon" src="img/moon.png" id='moon'>
+      <img class="sun" src="img/sun.png" id='sunID'>
+      <img class="moon" src="img/moon.png" id='moonID'>
     </div>
     <div class = "button_container">
       <button type="button" class="zikrButton" onclick = "count()"> Zikr </button>
     </div>      
     <div class="zikrCounter" id="zikrs"></div>    
     <div class = "button_reset">
-      <button type="button" class="bt btn-light" onclick = "reset()"> RESET </button>
+      <!-- <button type="button" class="bt btn-light" onclick = "reset()"> RESET </button> -->
     </div> 
-    <script src="js/lab9.js"></script>
+    <script src="js/lab9 auto rotation.js"></script>
   </body>
 </html>
