--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>      
     <div class="zikrCounter" id="zikrs"></div>    
     <div class = "button_reset">
-      <!-- <button type="button" class="bt btn-light" onclick = "reset()"> RESET </button> -->
+     <button type="button" class="bt btn-light" onclick = "reset()"> RESET </button> 
     </div> 
-    <script src="js/lab9 auto rotation.js"></script>
+    <script src="js/lab9 ellipse works.js"></script>
   </body>
 </html>
