--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
+    
     <div class="loader">
-      <img src="img/preloader.gif" alt="Loading..." />
-  </div>
+      <div class="appName">
+        <p>ZikrLife</p>
+      </div>
+      <img src="img/preloader.gif" class="preloader"/>
+    </div>
     <img class="background_mountains" src="img/background_mountains.png">  
     <div class = "skyObjects">
       <img class="sun" src="img/sun.png" id='sunID'>
@@ -21,14 +25,11 @@
     <div class = "zikr_button_container">
       <button type="button" class="zikrButton" onclick = "count()"> Zikr </button>
     </div>      
-      <br><br><br>
     <div class = "reset_button_container">
       <button type="button" class= "resetButton3"> </button>
       <button type="button" class= "resetButton" id="zikrs" > </button>
       <button type="button" class= "resetButton2" onclick = "resetZikrs()"> Reset </button>
-    </div> 
-  </div>
-    
-    <script src="js/lab9 ellipse works.js"></script>
+    </div>     
+    <script src="js/zikrCounter.js"></script>
   </body>
 </html>
