change Colors and Sizes

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
       </div>
       <img src="img/preloader.gif" class="preloader"/>
     </div>
-    <img class="background_mountains" src="img/background_mountains.png">  
+    <img class="backgroundMountains" src="img/background_mountains.png">  
     <div class = "skyObjects">
       <img class="sun" src="img/sun.png" id='sunID'>
       <img class="moon" src="img/moon.png" id='moonID'>
     </div>
-    <div class = "zikr_button_container">
+    <div class = "zikrButtonContainer">
       <button type="button" class="zikrButton" onclick = "count()"> Zikr </button>
     </div>      
-    <div class = "reset_button_container">
-      <button type="button" class= "resetButton3"> </button>
-      <button type="button" class= "resetButton" id="zikrs" > </button>
-      <button type="button" class= "resetButton2" onclick = "resetZikrs()"> Reset </button>
+    <div class = "resetButtonContainer">
+      <button type="button" class= "resetBackground"> </button>
+      <button type="button" class= "counter" id="zikrs" > </button>
+      <button type="button" class= "resetButton" onclick = "resetZikrs()"> Reset </button>
     </div>     
     <script src="js/zikrCounter.js"></script>
   </body>
